# Blue-data-analytics

./: .gitignore  DEPLOYMENT.md  Makefile  README.md  package-lock.json  package.json  predictive_analysis_phase2_real.py  predictive_analysis_phase2_simple.py  pyproject.toml  requirements.txt  setup_blue_data_analytics.sh  start-dashboard.sh  tailwind.config.js  vercel.json
backend/: app.py  app_fast.py  app_real.py  app_simple.py  requirements-dev.txt  requirements.txt  requirements_simple.txt
backend/app/: main.py
backend/config/: settings.py
backend/scripts/analysis/: data_analysis_phase1.py  data_analysis_phase1_real.py  predictive_analysis_6month_forecast.py  predictive_analysis_high_accuracy.py  predictive_analysis_phase2.py  predictive_analysis_phase2_fixed.py  test_backend.py  test_installation.py
backend/utils/: __init__.py
backend/utils/analysis/: __init__.py  business_analyzer.py
backend/utils/helpers/: __init__.py  data_processor.py  model_trainer.py
data/raw/: Blue-data2.xlsx
docs/: phase2-completion-summary.md  phase3-progress-summary.md  refactor-plan.md
docs/technical/: README.md  README_ENHANCED.md  README_RESTRUCTURED.md
frontend/: .vercelignore  package-lock.json  package.json  real_coordinates.json  real_kpi_data.json  vercel.json
frontend/public/: manifest.webmanifest
frontend/src/app/: layout.tsx
frontend/src/app/api/eda/distributions/: route.ts
frontend/src/app/api/kpi/overview/: route.ts
frontend/src/app/api/map/hotspots/: route.ts
frontend/src/app/api/predictions/portfolio/: route.ts
frontend/src/app/api/schedule/forecast/: route.ts
frontend/src/app/chat/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/eda/: page.tsx
frontend/src/app/prediction/: page.tsx
frontend/src/app/reporting/: page.tsx
frontend/src/components/charts/: CorrelationHeatmap.tsx  DistributionChart.tsx  TrendChart.tsx
frontend/src/components/layout/: footer.tsx  header.tsx  main-layout.tsx
frontend/src/components/maps/: AdvancedRouteMap.tsx  BasicRouteMap.tsx  DubaiRouteMap.tsx  HotspotMap.tsx  RealDubaiMap.tsx  RouteViewer.tsx  SimpleRouteMap.tsx
frontend/src/components/ui/: logo.tsx  realtime-clock.tsx
frontend/src/lib/: types.ts
frontend/src/public/: manifest.webmanifest
public/: index.html
scripts/: etl.py  start-complete.sh  start-frontend.sh  train.py
scripts/setup/: fix_installation.sh  start_dashboard.sh  start_dashboard_restructured.sh
snapshots/2025-08/: kpi_overview.json  model_summary.json  predictions.json
src/: App.js  index.css
src/components/: AdvancedDashboard.js  ErrorBoundary.js  Layout.js  LoadingSpinner.js  TestChart.js
src/data/: mockData.js
src/pages/: AIChatbot.js  Dashboard.js  Insights.js  Predictions.js
src/utils/: ai.js  pdfExport.js
